Fix imprint on safari

--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -17,9 +17,7 @@
 }
 
 .left-column, .right-column {
-  display: flex;
   flex: 1 1 100%;
-  flex-direction: column;
 }
 
 @media #{$mat-gt-md} {
